[package]
name = "dssc"
version = "0.1.0"
authors = ["Denis Lavrov <bahus.vel@gmail.com>"]

[lib]
name = "dssc"
path = "src/lib.rs"

[[bin]]
name = "linedssc"
path = "src/linedssc/main.rs"

[dependencies]
byteorder = "1.1.0"
clap = "2.29.0"
flate2 = "1.0.1"
fnv = "1.0.6"
slab = "0.4.0"
bio = "0.15.0"
