[package]
name = "dssc"
version = "0.1.0"
authors = ["Denis Lavrov <bahus.vel@gmail.com>"]

[lib]
name = "dssc"
path = "src/lib.rs"

[[bin]]
name = "linedssc"
path = "src/linedssc/main.rs"

[profile.release]
debug = true

[dependencies]
byteorder = "1.1.0"
clap = "2.29.0"
flate2 = "1.0.1"
fnv = "1.0.6"
slab = "0.4.0"
zstd = "0.4.14"
zstd-safe = "1.3.2"
